REFACTOR: spring extention tests