@@ -1,11 +1,9 @@
 package com.adelean.inject.resources.spring;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.util.Date;
-
+import com.adelean.inject.resources.spring.beans.BeanWithYamlDocumentsResources;
+import com.adelean.inject.resources.spring.beans.TestConfig;
+import com.adelean.resources.data.LogSeverity;
+import com.adelean.resources.data.snakeyaml.Log;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -13,11 +11,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import com.adelean.inject.resources.spring.beans.BeanWithYamlDocumentsResources;
-import com.adelean.inject.resources.spring.beans.TestConfig;
-import com.adelean.resources.data.LogSeverity;
-import com.adelean.resources.data.snakeyaml.Log;
-import com.tngtech.archunit.thirdparty.com.google.common.collect.ImmutableMap;
+
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.Date;
+import java.util.Map;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 @ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = TestConfig.class)
@@ -81,11 +81,11 @@ public class YamlDocumentsResourceAnnotationTests {
                 .isNotEmpty()
                 .hasSize(2)
                 .containsExactly(
-                        ImmutableMap.of(
+                        Map.of(
                                 "file", "TopClass.py",
                                 "line", 23,
                                 "code", "x = MoreObject(\"345\\n\")\n"),
-                        ImmutableMap.of(
+                        Map.of(
                                 "file", "MoreClass.py",
                                 "line", 58,
                                 "code", "foo = bar"));
@@ -139,11 +139,11 @@ public class YamlDocumentsResourceAnnotationTests {
                 .isNotEmpty()
                 .hasSize(2)
                 .containsExactly(
-                        ImmutableMap.of(
+                        Map.of(
                                 "file", "TopClass.py",
                                 "line", 23,
                                 "code", "x = MoreObject(\"345\\n\")\n"),
-                        ImmutableMap.of(
+                        Map.of(
                                 "file", "MoreClass.py",
                                 "line", 58,
                                 "code", "foo = bar"));
